# ChenPi11.github.io

./: .gitignore  .markdownlint.json  .shellcheckrc  CMakeLists.txt  CNAME  Cargo.toml  Makefile.in  Makefile.toml  README.md  _config.yml  about.html  autogen.sh  buildlog.txt  config.hpp.in  configure.ac  go.mod  go.sum  index.html  index.html.in.in  log-term.html  log-term.js  log.html  package.json  post-tab-render.go  post-template.html.in  pyproject.toml  repo.json  requirements.txt  settings.html  sidebar.html  sidebar.js  style.css  tag-template.html.in  tags.html  theme-loader.js  tools.json  tsconfig.json
.github/workflows/: deploy.yaml
.rubisco/: wwwroot.yaml
chenpi11_blog/: __init__.py  build_blog.py  extract-tab.go  i18n.go  i18n.py  is-blog.go  is_blog.py  lang_stat.py  languages.py  markdown.go  trim_wwwroot.py  verbose.go
cmake/: cmake_uninstall.cmake.in  configure.cmake
include/: configure.h  configure.hpp  content.h  content.hpp  copyfile.h  defines.h  file-util.h  file-util.hpp  i18n.h  i18n.hpp  log.h  log.hpp  markdown-it.h  post-hash.h  post-info.hpp  post.h  post.hpp  process.h
lib/: Makefile.in  about.css  bell.js  cookie.js  index.css  io.js  log-term.js  mathjax.js  notice.css  notice.js  page-msg.js  queue.js  settings.css  settings.js  sidebar.js  style.css  tab-div.css  tab-div.js  tags.css  tags.js  term-themes.js  terminal.css  terminal.js  theme-button.css  theme-button.js  theme-loader.js  themes-list.js
m4/: cargo.m4  cmake.m4  golang.m4  npm.m4  python3.m4
media/: Makefile.in
mkpostlists/: configure.in
orig-posts/: 2025-01-20-0.md  2025-01-25-0.md  2025-03-23-0.md  2025-05-25-0.md
orig-posts/applets/2025-01-25-0/: 0.js  1.js  2.js
orig-posts/res/2025-03-23-0/: 80x25.js  hello-world.js  input.js
orig-posts/res/2025-05-25-0/: example.js
po/: Makefile.in  en_US.po  zh_CN.po
posts/: 2025-01-20-0.html  Makefile.in  post-template.html.in.in
posts/hash/: 2025-01-20-0.hash  2025-01-25-0.hash  2025-03-23-0.hash  2025-05-25-0.hash
prism/dark/: prism.css
prism/light/: prism.css
scripts/: build.sh  gettext.sh  mkpostinfo.awk  real-build.sh  run.sh  setup.sh  vex  wait-target.sh
src/: Makefile.in  build-post.c  configure.c  configure.cpp  configure.rs  content.c  content.cpp  copyfile.c  file-util.c  file-util.cpp  gen-post-json.ts  i18n.c  i18n.cpp  i18n.rs  i18n.ts  is-blog.ts  log.c  log.cpp  log.rs  log.ts  markdown-it.c  md5.c  mkpostlists.cpp  new-post-template.md  new-post.rs  post-hash.c  post-meta.ts  post.c  post.cpp  post_template.rs  process.c  verbose.rs  verbose.ts
terminal/: terminal.css
theme-button/: README.md  index.html
wwwroot/: about.html  buildlog.txt  index.html  log-term.js  log.html  posts-meta.json  settings.html  style.css  tags.html  theme-loader.js
wwwroot/lib/: about.css  bell.js  cookie.js  index.css  io.js  log-term.js  mathjax.js  notice.css  notice.js  page-msg.js  queue.js  settings.css  settings.js  sidebar.js  sprintf.js  style.css  tab-div.css  tab-div.js  tag-filter.js  tags.css  tags.js  term-themes.js  terminal.css  terminal.js  theme-button.css  theme-button.js  theme-loader.js  themes-list.js
wwwroot/posts/: 2025-01-20-0.html  2025-01-25-0.html  2025-03-23-0.html  2025-05-25-0.html
wwwroot/posts/applets/2025-01-25-0/: 0.js  1.js  2.js
wwwroot/posts/res/2025-03-23-0/: 80x25.js  hello-world.js  input.js
wwwroot/posts/res/2025-05-25-0/: example.js
wwwroot/prism/dark/: prism.css  prism.js
wwwroot/prism/light/: prism.css  prism.js
wwwroot/terminal/: terminal.js
