# Copyright (C) 2025 ChenPi11.
# This file is part of chenpi11-blog.
#
# chenpi11-blog is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# chenpi11-blog is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with chenpi11-blog.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "chenpi11-blog"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "new-post"
path = "src/new-post.rs"

[dependencies]
chrono = "^0.4.17"
gettext = "0.4.0"
lazy_static = "1.5.0"
libc = "0.2.171"
strfmt = "0.2.4"
sys-locale = "0.3.2"
