#!/bin/sh
# Copyright (C) 2025 ChenPi11.
# This file is part of chenpi11-blog.
#
# chenpi11-blog is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.
#
# chenpi11-blog is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with chenpi11-blog.  If not, see <https://www.gnu.org/licenses/>.

# This is a wrapper script for Autotools to configure CMake projects.

top_srcdir=@top_srcdir@

prefix=@prefix@

BUILD_TYPE=@BUILD_TYPE@
CC=@CC@
CXX=@CXX@
CMAKE=@CMAKE@
CMAKEFLAGS=@CMAKEFLAGS@

# Build type.
CMAKEFLAGS_DEBUG="-DCMAKE_BUILD_TYPE=Debug -DCMAKE_EXPORT_COMPILE_COMMANDS=ON $CMAKEFLAGS"
CMAKEFLAGS_RELEASE="-DCMAKE_BUILD_TYPE=Release $CMAKEFLAGS"
if [ "$BUILD_TYPE" = "DEBUG" ]; then
  CMAKEFLAGS="$CMAKEFLAGS_DEBUG"
elif [ "$BUILD_TYPE" = "RELEASE" ]; then
  CMAKEFLAGS="$CMAKEFLAGS_RELEASE"
else
  echo "Unknown build type: $BUILD_TYPE"
  exit 1
fi

# Compiler.
CMAKEFLAGS="-DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX $CMAKEFLAGS"

# Install prefix.
CMAKEFLAGS="-DCMAKE_INSTALL_PREFIX=$prefix $CMAKEFLAGS"

# Configure.
top_srcdir=$(realpath "$top_srcdir")

cd "$top_srcdir" || exit 1
echo "$CMAKE" -S "$top_srcdir" -B "$top_srcdir/build" "$CMAKEFLAGS" -G "Unix Makefiles"
# shellcheck disable=SC2086
"$CMAKE" -S "$top_srcdir" -B "$top_srcdir/build" $CMAKEFLAGS -G "Unix Makefiles"
exit $?
